test/lf/src/failing/NotFullyConnected.lf
target uC

reactor Src {
  output [10] out:int

  reaction(startup) -> out {=
    for (int i = 0; i < out_width; i++) {
      lf_set(out[i], i);
    }
  =}
}

reactor Dest(bank_idx:int=0) {
  input in:int
  reaction(in) {=
    printf("Received %d on %d\n", self->bank_idx, in->value);
    validate(in->value == self->bank_idx);
  =}
}

reactor Dest2 {
  input[2] in:int
  reaction(in) {=
    validate(in[0]->value == 5);
    validate(in[1]->value == 6);
  =}
}

reactor Dest3 {
  input in:int
  reaction(in) {=
    validate(in[1]->value == 7);
  =}

}

main reactor {
  src = new Src()
  dest = new[5] Dest()
  dest2 = new Dest2()
  dest3 = new Dest3()
  src.out -> dest.in, dest2.in, dest3.in
}